Add constructor gameController with mock test
Signed-off-by: Rickypanta0 <rickypanta.dev@gmail.com>